sass/local.scss
$foreground: #A9B7C6;

.content {
  h1, h2, h3, h4, h5, h6 {
    color: var(--accent);
  }
}

.header .menu {
  display: flex;
  justify-content: space-between;
}
input#search-box {
  color: $foreground;
  background-color: rgba(0, 0, 0, 0.0);
  border: 0;
  border-bottom: 1px solid $foreground;
  //padding: 0.3rem;
  //line-height: 1.54;
  font-size: 1rem;
  font-family: Hack, DejaVu Sans Mono, Monaco, Consolas, Ubuntu Mono, monospace;
}
input#search-box:focus {
  border-bottom: 1px solid var(--accent);
  outline: none;
}

.search-results {
}

.term-highlight {
  background-color: var(--accent-alpha-20);
}

.spacer {
  flex-grow: 1;
  min-height: 1rem;
}

// mobile -- breakpoint taken from hyde.css
@media (max-width: 48em) {
  .sidebar {
    align-items: center;
  }
}

.hidden {
  display: none;
}

